--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>✨ [Your Name] — Content Writer</title>
+<title>Maharshi's Portfolio</title>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito:wght@400;600;700;800;900&family=Space+Mono:wght@700&display=swap" rel="stylesheet"/>
 <style>
 /* ===== VARIABLES ===== */
@@ -649,6 +649,14 @@ nav a:hover { color: var(--pink); }
 .tl-item:nth-child(2) .tl-badge { background: var(--blue-pale); color: var(--blue); border-color: var(--blue-light); }
 .tl-item:nth-child(3) .tl-badge { background: var(--lime-pale); color: var(--lime); border-color: var(--lime-light); }
 .tl-desc { color: var(--text-soft); font-size: 0.92rem; line-height: 1.7; font-weight: 700; }
+
+ul.tl-desc {
+  padding-left: 1.2rem;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+}
 
 /* ===== WRITING SAMPLES ===== */
 .samples-section { padding: 80px 6%; background: white; border-radius: 40px; margin: 0 4%; }
@@ -1385,7 +1393,7 @@ body.hovering #cursor-ring { transform: translate(-50%,-50%) scale(1.8); opacity
     <div class="hero-name-block">
       <span class="hero-hi">Hi, I'm</span>
       <div class="hero-name-row">
-        <span class="hero-name-text">Maharshi</span>
+        <span class="hero-name-text">Modi Maharshi</span>
         <span class="hero-name-bow">🎀</span>
       </div>
       <div class="hero-title-row">
@@ -1552,7 +1560,7 @@ body.hovering #cursor-ring { transform: translate(-50%,-50%) scale(1.8); opacity
     <div class="tl-item">
       <div class="tl-dot"></div>
       <div class="tl-card">
-        <div class="tl-date">Feb 2024 → Present</div>
+        <div class="tl-date">Feb 2025 → Present</div>
         <div class="tl-role">SEO Writing Executive</div>
         <div class="tl-company">B2B Rocket 🚀</div>
         <div class="tl-badges">
@@ -1560,7 +1568,32 @@ body.hovering #cursor-ring { transform: translate(-50%,-50%) scale(1.8); opacity
           <span class="tl-badge">B2B SaaS</span>
           <span class="tl-badge">SEO Content</span>
         </div>
-        <p class="tl-desc">Producing high-volume SEO blogs, LinkedIn articles, comparison pages, newsletters, special blogs, and grey articles. Promoted from intern to full-time in under 3 months — one of the youngest on the team.</p>
+        <ul class="tl-desc">
+          <li>Own full-cycle SEO content — research, writing, and on-page optimization using Semrush</li>
+          <li>Produce blogs, LinkedIn articles, comparison pages, newsletters & grey articles for B2B SaaS</li>
+          <li>Build every piece from scratch — keyword research to final optimized draft, no handholding</li>
+          <li>Promoted to Executive after 1 year of consistent, high-volume delivery</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="tl-item">
+      <div class="tl-dot"></div>
+      <div class="tl-card">
+        <div class="tl-date">Feb 2024 → Feb 2025</div>
+        <div class="tl-role">Content Writer</div>
+        <div class="tl-company">B2B Rocket 🚀</div>
+        <div class="tl-badges">
+          <span class="tl-badge">Full-Time</span>
+          <span class="tl-badge">B2B SaaS</span>
+          <span class="tl-badge">1 Year</span>
+        </div>
+        <ul class="tl-desc">
+          <li>Wrote 300+ articles in 12 months across B2B SaaS verticals — quality held at every step</li>
+          <li>Used Semrush to research and back every piece with real search data</li>
+          <li>Worked independently from brief to final draft with zero micromanagement needed</li>
+          <li>Output consistency earned a promotion in exactly 12 months</li>
+        </ul>
       </div>
     </div>
 
@@ -1568,27 +1601,17 @@ body.hovering #cursor-ring { transform: translate(-50%,-50%) scale(1.8); opacity
       <div class="tl-dot"></div>
       <div class="tl-card">
         <div class="tl-date">Dec 2023 → Feb 2024</div>
-        <div class="tl-role">SEO Writing Intern</div>
+        <div class="tl-role">Content Writing Intern</div>
         <div class="tl-company">B2B Rocket 🚀</div>
         <div class="tl-badges">
           <span class="tl-badge">Internship</span>
           <span class="tl-badge">→ Converted Full-Time</span>
         </div>
-        <p class="tl-desc">Started as an intern and quickly proved my worth through output quality, consistency, and ability to adapt to briefs. Converted to full-time in under 3 months.</p>
-      </div>
-    </div>
-
-    <div class="tl-item">
-      <div class="tl-dot"></div>
-      <div class="tl-card">
-        <div class="tl-date">Before Dec 2023</div>
-        <div class="tl-role">Freelance Content Writer</div>
-        <div class="tl-company">Compupandit · MogheruMehona ✨</div>
-        <div class="tl-badges">
-          <span class="tl-badge">Freelance</span>
-          <span class="tl-badge">Independent</span>
-        </div>
-        <p class="tl-desc">Worked independently with multiple clients, building writing foundations and learning to manage deliverables, deadlines, and diverse content briefs on my own terms.</p>
+        <ul class="tl-desc">
+          <li>Converted to full-time in under 90 days — one of the fastest on the team</li>
+          <li>Adapted to briefs quickly and delivered consistently from week one</li>
+          <li>Proved reliability and quality early, making the hire decision easy</li>
+        </ul>
       </div>
     </div>
 
@@ -1683,8 +1706,11 @@ body.hovering #cursor-ring { transform: translate(-50%,-50%) scale(1.8); opacity
     <h2 class="contact-h">Got a brief? Let's make it count.</h2>
     <p class="contact-sub">I'm exploring new opportunities. If you need a writer who shows up and delivers — let's talk!</p>
     <div class="contact-btns">
-      <a href="/cdn-cgi/l/email-protection#354c5a4047755058545c591b565a58" class="btn-white">✉️ <span class="__cf_email__" data-cfemail="275e48525567424a464e4b0944484a">[email&#160;protected]</span></a>
-      <a href="https://linkedin.com/in/yourprofile" target="_blank" class="btn-ghost-w">🔗 LinkedIn</a>
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=modimaharshi8@gmail.com&su=Portfolio%20Inquiry" target="_blank" class="btn-white">
+  ✉️ Email Me
+</a>
+
+      <a href="https://www.linkedin.com/in/maharshi-modi-6676172a4/" target="_blank" class="btn-ghost-w">🔗 LinkedIn</a>
     </div>
   </div>
 </section>
@@ -1696,7 +1722,7 @@ body.hovering #cursor-ring { transform: translate(-50%,-50%) scale(1.8); opacity
 </footer>
 
 <!-- ===== JS ===== -->
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script>
 // --- CURSOR ---
 const cursorStar = document.getElementById('cursor-star');
 const cursorRing = document.getElementById('cursor-ring');
